MDEV-16248 Row based replication to spider with float column fails on delete/update